# test_2_Marusich

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
main_app/: .coverage  pytest.ini
main_app/main_app/: settings.py  urls.py
main_app/space_api/: apps.py  models.py  serializer.py  services.py  urls.py  views.py
main_app/space_api/migrations/: 0001_initial.py  0002_alter_station_name.py  0002_station_status.py  0003_alter_instructions_distance.py
main_app/tests/: conftest.py
main_app/tests/api/: test_user.py
